<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/card_bg"
    app:cardElevation="4dp"
    android:layout_marginBottom="4dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/promo_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="@string/promo_code"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            />

        <LinearLayout
            android:id="@+id/promo_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/promo_code_tv"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/discount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/discount"
                    android:layout_marginBottom="8dp"
                    />
                <TextView
                    android:id="@+id/from_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:layout_below="@+id/discount_tv"
                    />
                <TextView
                    android:id="@+id/from_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_time"
                    android:layout_below="@+id/from_tv"
                    android:layout_marginBottom="4dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/condition_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/condition"
                    android:layout_marginBottom="8dp"
                    />
                <TextView
                    android:id="@+id/to_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:layout_below="@+id/condition_tv"
                    />
                <TextView
                    android:id="@+id/to_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_time"
                    android:layout_below="@+id/to_tv"
                    android:layout_marginBottom="4dp"
                    />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_below="@+id/promo_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:hint="@string/description"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>