<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_promo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginBottom="48dp">

        <EditText
            android:id="@+id/promoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/onelineuserEditText"
            android:hint="@string/promo_code"
            android:layout_marginBottom="12dp"
            />

        <RelativeLayout
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            >
            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="start"/>
            <EditText
                android:id="@+id/et_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_discount"
                android:layout_toStartOf="@+id/discount_percent"
                style="@style/onelineuserEditText"
                android:inputType="numberDecimal"/>
            <TextView
                android:id="@+id/discount_percent"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/percentage"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            >
            <TextView
                android:id="@+id/tv_condition"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/condition"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="start" />
            <EditText
                android:id="@+id/et_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_condition"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                style="@style/onelineuserEditText"
                android:inputType="text"/>
        </RelativeLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/date_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/onelineuserEditText"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:inputType="date"/>
            <EditText
                android:id="@+id/time_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/onelineuserEditText"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:inputType="time"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/date_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/onelineuserEditText"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:inputType="date"/>
            <EditText
                android:id="@+id/time_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/onelineuserEditText"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:inputType="time"/>
        </LinearLayout>

        <EditText
            android:id="@+id/desEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/fivelineuserEditText"
            android:lines="5"
            android:maxLines="5"
            android:ellipsize="end"
            android:hint="@string/description"
            android:gravity="start|top"/>

    </LinearLayout>

    <Button
        android:id="@+id/saveBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_menu"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/top_bg"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>